# course_work_4

./: README.md  pyproject.toml
data/: vacancies.json
src/: job_board.py  main.py
