[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["Evgeny Safonov <jeka-luda@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^6.1.0"
mypy = "^1.8.0"
black = "^23.12.0"
isort = "^5.13.2"

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.black]
# максимальная длина строки
line-length = 119
# файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # исключить несколько общих каталогов в
    | \.git          # корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # также отдельно исключить файл с именем foo.py в
                     # корне проекта
)
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
